[FEATURE] integrate xuemi&oodesign

--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -21,6 +21,7 @@
   "ForbiddenPage.*.home": "Rumah",
   "ForbiddenPage.*.noAuthority": "Anda tidak diizinkan untuk melihat halaman ini.",
   "ForbiddenPage.*.previousPage": "Sebelumnya",
+  "GiftPlanCollectionAdminPage.GiftPlanCollectionBlock.createAt": "建立日期",
   "ProgramAdminPage.*.approvalHistory": "Riwayat Audit",
   "ProgramAdminPage.*.basicSettings": "Pengaturan Dasar",
   "ProgramAdminPage.*.cancel": "Batal",
@@ -156,6 +157,7 @@
   "activity.status.hidden": "Tersembunyi",
   "activity.status.holding": "Menahan",
   "activity.status.notPublishedTicket": "Ditangguhkan.",
+  "activity.status.privateHolding": "私密舉辦",
   "activity.status.public": "Tampilkan",
   "activity.status.publishedTicket": "Diterbitkan.",
   "activity.text.deleteActivitySessionWarning": "Apakah Anda yakin ingin menghapus sesi ini? Tindakan ini tidak dapat dipulihkan",
@@ -164,6 +166,7 @@
   "activity.text.noDescription": "Tidak ada deskripsi aktivitas.",
   "activity.text.noTicketPlan": "Tidak ada Paket tiket.",
   "activity.text.notCompleteNotation": "Silakan isi informasi yang diperlukan di bawah ini. Isi dan publikasikan.",
+  "activity.text.privatelyPublishedNotation": "你的活動已經私密發佈，此活動不會出現在頁面上，學生僅能透過連結進入瀏覽。",
   "activity.text.publishedNotation": "Setelah aktivitas Anda dipublikasikan, aktivitas itu akan muncul di halaman.",
   "activity.text.unpublishedNotation": "Karena aktivitas Anda tidak dipublikasikan, aktivitas ini tidak akan ditampilkan di halaman.",
   "activity.ui.addTicketPlan": "Tambah Paket Tiket",
@@ -199,6 +202,7 @@
   "admin.AdminMenu.creditAdmin": "Rebate kredit",
   "admin.AdminMenu.eCommerce": "E-Commerce",
   "admin.AdminMenu.exerciseResult": "Hasil Ujian",
+  "admin.AdminMenu.giftPlans": "贈品方案",
   "admin.AdminMenu.learningOverviewAdmin": "Ringkasan Pembelajaran",
   "admin.AdminMenu.mediaLibrary": "Perpustakaan Media",
   "admin.AdminMenu.memberAdmin": "Manajemen Anggota",
@@ -440,6 +444,8 @@
   "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
   "common.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
+  "common.confirmPrivatelyPublishedNotation": "將不會出現在列表，僅以私下提供連結的方式。",
+  "common.confirmPrivatelyPublishedTitle": "確定要設為私密發佈？",
   "common.event.cancelSubscriptionSuccess": "Cancel SubscriptionSuccess",
   "common.event.failedSave": "Penyimpanan gagal",
   "common.event.failedUpload": "Upload gagal",
@@ -460,6 +466,7 @@
   "common.label.adminBackstage": "Admin Belakang Panggung",
   "common.label.all": "Semua",
   "common.label.allActivityTicket": "Semua aktivitas",
+  "common.label.allGiftPlan": "所有贈品方案",
   "common.label.allMembers": "Semua Anggota",
   "common.label.allMembershipCard": "Semua Kartu Keanggotaan",
   "common.label.allMerchandise": "Semua merchandise",
@@ -535,6 +542,7 @@
   "common.label.invoiceUniformNumber": "Nomor Seragam Faktur",
   "common.label.invoiceUniformTitle": "Judul Seragam Faktur",
   "common.label.isAppOwner": "Administrator",
+  "common.label.keywords": "keywords",
   "common.label.languages": "Bahasa",
   "common.label.lastLogin": "Login Terakhir",
   "common.label.leadLevel": "分級",
@@ -553,6 +561,11 @@
   "common.label.newPasswordAgain": "kata sandi baru lagi",
   "common.label.notMember": "Bukan anggota?",
   "common.label.notification": "Pemberitahuan",
+  "common.label.ogDescription": "og:description",
+  "common.label.ogImage": "og:image",
+  "common.label.ogImageAlt": "og:image:alt",
+  "common.label.ogTitle": "og:title",
+  "common.label.openGraphSettings": "Open Graph Settings",
   "common.label.optional": "Opsional",
   "common.label.orderDiscountId": "ID Diskon",
   "common.label.orderDiscountName": "Nama Diskon",
@@ -580,6 +593,7 @@
   "common.label.originalPrice": "Harga Asli",
   "common.label.ownedCoins": "Koin Milik",
   "common.label.owner": "Pendiri",
+  "common.label.pageTitle": "Page Title",
   "common.label.participants": "Jumlah orang",
   "common.label.password": "Sandi",
   "common.label.paymentCreatedAt": "Waktu transaksi",
@@ -629,6 +643,8 @@
   "common.label.selectEndTime": "Pilih Tanggal Berakhir",
   "common.label.selectInstructor": "Instruktur",
   "common.label.sellingStatus": "Status Penjualan",
+  "common.label.seoDescription": "description",
+  "common.label.seoSettings": "SEO Settings",
   "common.label.sessionTitle": "Judul Sesi",
   "common.label.shortDescription": "Deskripsi Singkat",
   "common.label.sku": "SKU",
@@ -713,6 +729,7 @@
   "common.menu.tempoDelivery": "Pengiriman Tempo",
   "common.period.no": "Tidak ada periode penggunaan",
   "common.placeholder.enterUrlLink": "Masukkan tautan URL",
+  "common.placeholder.useCommaToSeparateKeywords": "Use comma to separate keywords",
   "common.product.activityTicket": "Aktivitas",
   "common.product.allActivityTicket": "Semua Aktivitas",
   "common.product.allAppointmentPlan": "Semua AppointmentPlan",
@@ -797,6 +814,7 @@
   "common.text.totalActualSalesNotation": "Total penjualan -Diskon awal berlangganan = total penjualan aktual",
   "common.text.totalCount": "{count} hasil",
   "common.text.unpublishingTitle": "Apakah Anda yakin ingin membatalkan publikasi?",
+  "common.text.unpublishingWarning": "將下架且不會出現在列表，已擁有權益的會員仍然可以看到內容。",
   "common.text.withSharingCode": "URL Promosi: {code}",
   "common.ui.add": "Tambah",
   "common.ui.addAuthor": "Tambahkan Penulis",
@@ -828,6 +846,7 @@
   "common.ui.deleteProgram": "Hapus Kursus",
   "common.ui.desktopCollection": "Komputer",
   "common.ui.detail": "Detail",
+  "common.ui.discontinue": "下架",
   "common.ui.download": "Unduh",
   "common.ui.downloadMemberList": "Daftar Unduhan",
   "common.ui.duplicate": "Duplikat",
@@ -846,6 +865,7 @@
   "common.ui.goToCart": "Pergi ke Keranjang",
   "common.ui.googleLogin": "Masuk/daftar Google",
   "common.ui.gutter": "間距",
+  "common.ui.hasGiftPlan": "附贈品",
   "common.ui.hideCreator": "Sembunyikan Dosen",
   "common.ui.image": "gambar",
   "common.ui.import": "Impor",
@@ -1119,6 +1139,7 @@
   "craft.label.feature": "Fitur",
   "craft.label.fundraising": "Penggalangan Dana",
   "craft.label.fundraisingBlock": "Blok Dosen",
+  "craft.label.generalSettings": "一般設定",
   "craft.label.imageBlock": "Blok Gambar",
   "craft.label.imageSetting": "Pengaturan Gambar",
   "craft.label.imageStyle": "Gaya Gambar",
@@ -1220,6 +1241,10 @@
   "error.text.forbidden": "Izin ditolak.",
   "error.text.invalidURL": "URL tidak valid",
   "error.text.memberAlreadyExist": "Anggota sudah ada",
+  "form.*.endedAt": "截止日期",
+  "form.*.startedAt": "開始日期",
+  "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
+  "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
   "form.PermissionGroup.ACTIVITY_ADMIN": "Semua Fitur Aktif",
   "form.PermissionGroup.ACTIVITY_CATEGORY_ADMIN": "Semua kategori aktivitas berfungsi",
   "form.PermissionGroup.ACTIVITY_CATEGORY_DELETE": "Hapus Kategori Aktivitas",
@@ -1389,6 +1414,18 @@
   "form.PermissionInput.salesManagement": "Manajemen Bisnis",
   "form.PermissionInput.task": "Manajemen Tugas",
   "form.PermissionInput.voucher": "Skema Pertukaran",
+  "giftPlan.GiftPlanCollectionAdminModal.customGiftNameIsRequired": "贈品項目名稱為必填",
+  "giftPlan.GiftPlanCollectionAdminModal.editGiftPlan": "編輯贈品方案",
+  "giftPlan.GiftPlanCollectionAdminModal.giftCover": "贈品封面",
+  "giftPlan.GiftPlanCollectionAdminModal.giftCoverTips": "建議圖片尺寸：600*600px",
+  "giftPlan.GiftPlanCollectionAdminModal.giftDeliverMethod": "贈品交付方式",
+  "giftPlan.GiftPlanCollectionAdminModal.giftItemName": "贈品項目",
+  "giftPlan.GiftPlanCollectionAdminModal.isDeliverable": "需索取寄送地址",
+  "giftPlan.GiftPlanCollectionAdminModal.isNotDeliverable": "線上自行交付",
+  "giftPlan.GiftPlanCollectionAdminModal.title": "贈品方案名稱",
+  "giftPlan.GiftPlanCollectionAdminModal.titleIsRequired": "贈品方案名稱為必填",
+  "giftPlan.GiftPlanDeleteAdminModal.deleteGriftPlanMessage": "確定刪除此贈品方案？",
+  "giftPlan.GiftPlanPublishAdminModal.discontinueGriftPlanMessage": "確定下架此贈品方案？",
   "hooks.data.activity": "活動",
   "hooks.data.certificate": "證書",
   "hooks.data.merchandise": "商品",
@@ -1622,6 +1659,7 @@
   "merchandise.ui.shippingStoreName": "Toko Pengiriman",
   "merchandiseInventory.label.currentInventory": "Persediaan",
   "merchandiseInventory.label.sold": "Terjual",
+  "order.label.gift": "贈品項目",
   "order.label.hasPaid": "Berbayar",
   "order.label.hasRefunded": "Dana Dikembalikan",
   "order.label.invoiceAddress": "Alamat Faktur",
@@ -1654,10 +1692,14 @@
   "order.label.paymentLogGateway": "Saluran Transaksi",
   "order.label.paymentLogNo": "ID Transaksi",
   "order.label.paymentLogPaidAt": "Waktu pembayaran",
+  "order.label.productEndedAt": "項目到期時間",
   "order.label.productOwner": "Pencipta",
   "order.label.productPrice": "Jumlah Barang",
   "order.label.productQuantity": "Jumlah Barang",
   "order.label.productType": "Kategori Barang",
+  "order.label.recipientAddress": "收件地址",
+  "order.label.recipientName": "收件人",
+  "order.label.recipientPhone": "收件電話",
   "order.label.referrer": "Referrer",
   "order.label.sharingCode": "URL Promosi",
   "order.label.sharingNote": "Catatan Promosi",
@@ -1678,6 +1720,7 @@
   "page.*.day": "日",
   "page.*.deleteProductDanger": "*已購買者在刪除後仍可觀看。",
   "page.*.deliveryDate": "發送日",
+  "page.*.discontinued": "已下架",
   "page.*.edit": "編輯",
   "page.*.editCouponPlan": "編輯折價方案",
   "page.*.eligibilityList": "資格名單",
@@ -1742,6 +1785,7 @@
   "page.CouponCollectionBlock.emptyCouponPlan": "無任何折價方案",
   "page.CouponCollectionBlock.showMore": "顯示更多",
   "page.CouponPlanCollectionAdminPage.searchPlaceholder": "搜尋折扣代碼或折價券名稱",
+  "page.GiftPlanCollectionAdminPage.giftPlan": "贈品方案",
   "page.ProgramPackageProcessBlock.allProgramPackage": "Semua Paket Program",
   "page.ProgramPackageProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramPackageProcessBlock.chooseProgramPackageCategory": "Pilih Kategori Paket Kursus",
@@ -1801,9 +1845,11 @@
   "page.VenueCollectionPage.createVenue": "新增場地",
   "page.VenueCollectionPage.rows": "總行數",
   "page.VenueCollectionPage.seats": "座位數",
+  "page.VenueSeatSetting.blackboardPosition": "黑板位置",
   "page.VenueSeatSetting.col": "直欄",
   "page.VenueSeatSetting.cols": "直的列數",
   "page.VenueSeatSetting.high": "高起來",
+  "page.VenueSeatSetting.highWord": "高",
   "page.VenueSeatSetting.row": "橫列",
   "page.VenueSeatSetting.rows": "橫的行數",
   "page.VenueSeatSetting.walkway": "走道",
@@ -1976,12 +2022,26 @@
   "program.ProgramCollectionSelector.sortDesc": "Urutan terbalik",
   "program.ProgramContentAdminItem.privatePractice": "私密作業",
   "program.ProgramPackageSelector.allProgramPackage": "Semua kombinasi kursus",
+  "program.ProgramPlanAdminModal.availableForAllContent": "可看課程所有內容",
+  "program.ProgramPlanAdminModal.availableForPastContent": "可看指定方案過去與未來內容",
+  "program.ProgramPlanAdminModal.isPublished": "是否顯示方案",
+  "program.ProgramPlanAdminModal.permissionType": "選擇內容觀看權限",
+  "program.ProgramPlanAdminModal.planDescription": "方案描述",
+  "program.ProgramPlanAdminModal.planTitle": "方案名稱",
+  "program.ProgramPlanAdminModal.programExpirationNotice": "課程到期通知",
+  "program.ProgramPlanAdminModal.published": "發售，上架後立即開賣",
+  "program.ProgramPlanAdminModal.subscriptionPeriodType": "訂閱週期",
+  "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
+  "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
+  "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
   "program.event.editIssueFailed": "Sunting masalah gagal",
   "program.label.allProgram": "Semua Program",
   "program.label.allowMultipleAnswers": "Izinkan beberapa jawaban benar",
   "program.label.answerDescription": "Deskripsi Jawaban",
   "program.label.availableForAllContent": "Semua Konten Tersedia",
   "program.label.availableForPastContent": "Konten Sebelumnya Tersedia",
+  "program.label.availableToGoBack": "可返回前題",
+  "program.label.availableToRetry": "可重新測驗",
   "program.label.choice": "Opsi",
   "program.label.chooseCaptionLanguage": "Pilih bahasa terjemahan",
   "program.label.contentPlan": "Rencana Konten",
@@ -1994,8 +2054,10 @@
   "program.label.displayPrivate": "Hasil Pribadi",
   "program.label.duration": "Durasi (menit)",
   "program.label.estimatedTime": "Perkiraan waktu (menit)",
+  "program.label.exercise": "課後測驗",
   "program.label.exerciseCreatedAt": "Tanggal Ujian",
   "program.label.exerciseStatistics": "Status Ujian",
+  "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": "IndividualExercise",
   "program.label.isCorrectAnswer": "Ini adalah jawaban yang benar",
   "program.label.isPublished": "Apakah akan menampilkan program",
@@ -2044,6 +2106,7 @@
   "program.text.coverRequiredTips": "Jika tugas sebagian besar didasarkan pada file, disarankan untuk tidak mencentang",
   "program.text.deleteChoiceDescription": "Jika Anda menghapus opsi, opsi tersebut tidak dapat dipulihkan. Apakah Anda yakin ingin menghapusnya?",
   "program.text.deleteContentWarning": "Anda yakin ingin menghapus konten ini? Tindakan ini tidak dapat diurungkan",
+  "program.text.deleteExerciseWarning": "將刪除所有與此測驗相關資料且不可復原，確定要刪除嗎？",
   "program.text.deletePracticeWarning": "Semua data yang terkait dengan pekerjaan ini akan dihapus dan tidak dapat dipulihkan. Anda yakin ingin menghapusnya?",
   "program.text.deleteQuestionDescription": "Penghapusan pertanyaan tidak dapat dibatalkan. Anda yakin ingin menghapusnya?",
   "program.text.deleteSectionWarning": "Semua konten di bagian ini akan dihapus, tindakan ini tidak dapat dibatalkan",
@@ -2107,6 +2170,7 @@
   "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
   "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
   "programPackage.ProgramPackagePlanCollectionBlock.skuSetting": "設定料號",
+  "programPackage.isPrivatelyPublishedNotation": "你的課程組合已經私密發佈，此課程組合不會出現在頁面上，學生僅能透過連結進入瀏覽。",
   "programPackage.label.availableForLimitTime": "Tersedia untuk dilihat {jumlah} {satuan}",
   "programPackage.label.delete": "Hapus Paket Kursus",
   "programPackage.label.generalSetting": "Pengaturan Umum",
@@ -2117,6 +2181,7 @@
   "programPackage.label.perpetualPeriod": "Periode Abadi",
   "programPackage.label.program": "Program Program",
   "programPackage.label.subscriptionPeriod": "Periode Berlangganan",
+  "programPackage.privatelyPublished": "已私密發佈",
   "programPackage.status.notCompleteNotation": "Tidak dipublikasikan, paket kursus ini tidak akan ditampilkan di halaman",
   "programPackage.status.publishedNotation": "Sekarang setelah paket kursus Anda diterbitkan, itu akan muncul di halaman.",
   "programPackage.status.unpublished": "Tidak diterbitkan",
@@ -2177,6 +2242,7 @@
   "project.ui.activateShop": "Proyek Rilis",
   "project.ui.closeShop": "Batalkan publikasi",
   "project.ui.saveProjectPlan": "Simpan Proyek",
+  "promotion.*.isRequired": "請輸入{field}",
   "promotion.event.successfullyRevoked": "Berhasil dicabut",
   "promotion.label.amount": "Jumlah",
   "promotion.label.availableDateRange": "Tanggal Tersedia",
@@ -2233,6 +2299,7 @@
   "promotion.text.sentUsedCount": "Total {total} / Dikirim {ditukar} / Digunakan {digunakan}",
   "promotion.text.titlePlaceholder": "Silakan isi nama proyek",
   "promotion.ui.addVoucher": "Tambahkan Voucher",
+  "promotion.ui.createGiftPlan": "建立贈品",
   "promotion.ui.custom": "Kustom",
   "promotion.ui.editCouponPlan": "Edit Paket Kupon",
   "promotion.ui.exchange": "Pertukaran",
@@ -2306,7 +2373,6 @@
   "sales.label.keepInTouch": "Dalam Pengembangan",
   "sales.label.lastContactAt": "Waktu Kontak Terakhir",
   "sales.label.lastTask": "Pekerjaan Terbaru",
-  "sales.label.paidLead": "Siswa yang ada",
   "sales.label.paidPrice": "Jumlah yang Dibayar",
   "sales.label.potentials": "Untuk dikembangkan",
   "sales.label.presentedLead": "ShowedLead",
@@ -2321,6 +2387,7 @@
   "sales.label.salesPerformance": "Ringkasan Kinerja",
   "sales.label.salesStatus": "Status Pertempuran Langsung",
   "sales.label.serviceEndedAt": "Layanan Berakhir Pada",
+  "sales.label.signedLead": "Siswa yang ada",
   "sales.label.star": "Tingkat Bintang",
   "sales.label.starredLead": "Daftar Favorit",
   "sales.label.status": "Status",
