--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -21,6 +21,7 @@
   "ForbiddenPage.*.home": "trang nhất",
   "ForbiddenPage.*.noAuthority": "Bạn không được phép xem trang này.",
   "ForbiddenPage.*.previousPage": "Trước",
+  "GiftPlanCollectionAdminPage.GiftPlanCollectionBlock.createAt": "建立日期",
   "ProgramAdminPage.*.approvalHistory": "Hồ sơ xem xét",
   "ProgramAdminPage.*.basicSettings": "Cài đặt cơ bản",
   "ProgramAdminPage.*.cancel": "Hủy bỏ",
@@ -156,6 +157,7 @@
   "activity.status.hidden": "Chưa được công bố",
   "activity.status.holding": "Đang tổ chức",
   "activity.status.notPublishedTicket": "Bị tạm ngưng.",
+  "activity.status.privateHolding": "私密舉辦",
   "activity.status.public": "Hiển thị",
   "activity.status.publishedTicket": "Đã xuất bản.",
   "activity.text.deleteActivitySessionWarning": " Bạn có chắc chắn muốn xóa phiên này không? Không thể khôi phục hành động này ",
@@ -164,6 +166,7 @@
   "activity.text.noDescription": "Không có mô tả hoạt động.",
   "activity.text.noTicketPlan": "Gói không có vé.",
   "activity.text.notCompleteNotation": "Vui lòng điền vào thông tin bắt buộc bên dưới. Hãy điền và xuất bản nó.",
+  "activity.text.privatelyPublishedNotation": "你的活動已經私密發佈，此活動不會出現在頁面上，學生僅能透過連結進入瀏覽。",
   "activity.text.publishedNotation": " Bây giờ hoạt động của bạn đã được xuất bản, nó sẽ xuất hiện trên trang. ",
   "activity.text.unpublishedNotation": " Bởi vì hoạt động của bạn chưa được xuất bản, hoạt động này sẽ không được hiển thị trên trang. ",
   "activity.ui.addTicketPlan": "Thêm gói vé",
@@ -199,6 +202,7 @@
   "admin.AdminMenu.creditAdmin": "Giảm giá cổ tức",
   "admin.AdminMenu.eCommerce": "E -Commerce",
   "admin.AdminMenu.exerciseResult": "Kết quả kiểm tra",
+  "admin.AdminMenu.giftPlans": "贈品方案",
   "admin.AdminMenu.learningOverviewAdmin": "Nghiên cứu tổng thể",
   "admin.AdminMenu.mediaLibrary": "Thư viện truyền thông",
   "admin.AdminMenu.memberAdmin": "Quản lý thành viên",
@@ -440,6 +444,8 @@
   "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
   "common.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
+  "common.confirmPrivatelyPublishedNotation": "將不會出現在列表，僅以私下提供連結的方式。",
+  "common.confirmPrivatelyPublishedTitle": "確定要設為私密發佈？",
   "common.event.cancelSubscriptionSuccess": " Hủy đăng ký ",
   "common.event.failedSave": " Lưu không thành công ",
   "common.event.failedUpload": " Tải lên không thành công ",
@@ -460,6 +466,7 @@
   "common.label.adminBackstage": "Admin Backstage",
   "common.label.all": "Tất cả",
   "common.label.allActivityTicket": "Tất cả các hoạt động",
+  "common.label.allGiftPlan": "所有贈品方案",
   "common.label.allMembers": "Tất cả các thành viên",
   "common.label.allMembershipCard": "Tất cả các thẻ thành viên",
   "common.label.allMerchandise": "Tất cả hàng hóa",
@@ -535,6 +542,7 @@
   "common.label.invoiceUniformNumber": "Số thống nhất hóa đơn",
   "common.label.invoiceUniformTitle": "Tiêu đề thống nhất hóa đơn",
   "common.label.isAppOwner": "Quản trị viên",
+  "common.label.keywords": "keywords",
   "common.label.languages": "Ngôn ngữ",
   "common.label.lastLogin": "Lần Đăng nhập Cuối cùng",
   "common.label.leadLevel": "分級",
@@ -553,6 +561,11 @@
   "common.label.newPasswordAgain": "lại mật khẩu mới",
   "common.label.notMember": "Bạn không phải là thành viên?",
   "common.label.notification": " Thông báo ",
+  "common.label.ogDescription": "og:description",
+  "common.label.ogImage": "og:image",
+  "common.label.ogImageAlt": "og:image:alt",
+  "common.label.ogTitle": "og:title",
+  "common.label.openGraphSettings": "Open Graph Settings",
   "common.label.optional": "Tùy chọn",
   "common.label.orderDiscountId": "ID giảm giá",
   "common.label.orderDiscountName": "Tên Giảm giá",
@@ -580,6 +593,7 @@
   "common.label.originalPrice": " Giá gốc ",
   "common.label.ownedCoins": "Số tiền sở hữu ",
   "common.label.owner": " Người sáng lập ",
+  "common.label.pageTitle": "Page Title",
   "common.label.participants": " Số người ",
   "common.label.password": " Mật khẩu ",
   "common.label.paymentCreatedAt": "Giờ giao dịch",
@@ -629,6 +643,8 @@
   "common.label.selectEndTime": " Chọn Ngày Kết thúc ",
   "common.label.selectInstructor": "Người hướng dẫn",
   "common.label.sellingStatus": "Trạng thái Bán hàng",
+  "common.label.seoDescription": "description",
+  "common.label.seoSettings": "SEO Settings",
   "common.label.sessionTitle": "Tiêu đề phiên",
   "common.label.shortDescription": " Mô tả ngắn ",
   "common.label.sku": "SKU",
@@ -713,6 +729,7 @@
   "common.menu.tempoDelivery": " Giao hàng theo thời gian ",
   "common.period.no": " Không có thời gian sử dụng ",
   "common.placeholder.enterUrlLink": " Nhập liên kết URL ",
+  "common.placeholder.useCommaToSeparateKeywords": "Use comma to separate keywords",
   "common.product.activityTicket": "Hoạt động",
   "common.product.allActivityTicket": " Tất cả Hoạt động ",
   "common.product.allAppointmentPlan": " Tất cả lịch hẹn ",
@@ -797,6 +814,7 @@
   "common.text.totalActualSalesNotation": " Tổng doanh số -Chiết khấu ban đầu khi đăng ký = tổng doanh số bán hàng thực tế ",
   "common.text.totalCount": "{count} kết quả",
   "common.text.unpublishingTitle": "Bạn có chắc chắn muốn hủy xuất bản không? ",
+  "common.text.unpublishingWarning": "將下架且不會出現在列表，已擁有權益的會員仍然可以看到內容。",
   "common.text.withSharingCode": " URL quảng cáo: {code}",
   "common.ui.add": "Thêm",
   "common.ui.addAuthor": " Thêm tác giả ",
@@ -828,6 +846,7 @@
   "common.ui.deleteProgram": "Xóa khóa học",
   "common.ui.desktopCollection": " Máy tính ",
   "common.ui.detail": "Chi tiết",
+  "common.ui.discontinue": "下架",
   "common.ui.download": " Tải xuống ",
   "common.ui.downloadMemberList": " Danh sách Tải xuống ",
   "common.ui.duplicate": "Nhân bản",
@@ -846,6 +865,7 @@
   "common.ui.goToCart": "Chuyển đến Giỏ hàng",
   "common.ui.googleLogin": "Đăng nhập / đăng ký Google",
   "common.ui.gutter": "Gutter ",
+  "common.ui.hasGiftPlan": "附贈品",
   "common.ui.hideCreator": " Ẩn Giảng viên ",
   "common.ui.image": " hình ảnh ",
   "common.ui.import": " Nhập ",
@@ -1119,6 +1139,7 @@
   "craft.label.feature": " Tính năng ",
   "craft.label.fundraising": "Gây quỹ ",
   "craft.label.fundraisingBlock": " Khối giảng viên ",
+  "craft.label.generalSettings": "一般設定",
   "craft.label.imageBlock": " Khối Hình ảnh ",
   "craft.label.imageSetting": " Cài đặt Hình ảnh ",
   "craft.label.imageStyle": " Kiểu hình ảnh ",
@@ -1220,6 +1241,10 @@
   "error.text.forbidden": "Quyền bị từ chối.",
   "error.text.invalidURL": " URL không hợp lệ ",
   "error.text.memberAlreadyExist": " Thành viên đã tồn tại ",
+  "form.*.endedAt": "截止日期",
+  "form.*.startedAt": "開始日期",
+  "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
+  "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
   "form.PermissionGroup.ACTIVITY_ADMIN": "Tất cả các chức năng hoạt động",
   "form.PermissionGroup.ACTIVITY_CATEGORY_ADMIN": "Tất cả các chức năng phân loại hoạt động",
   "form.PermissionGroup.ACTIVITY_CATEGORY_DELETE": "Xóa phân loại hoạt động",
@@ -1389,6 +1414,18 @@
   "form.PermissionInput.salesManagement": "Quản lý kinh doanh",
   "form.PermissionInput.task": "Được quản lý",
   "form.PermissionInput.voucher": "Kế hoạch trao đổi",
+  "giftPlan.GiftPlanCollectionAdminModal.customGiftNameIsRequired": "贈品項目名稱為必填",
+  "giftPlan.GiftPlanCollectionAdminModal.editGiftPlan": "編輯贈品方案",
+  "giftPlan.GiftPlanCollectionAdminModal.giftCover": "贈品封面",
+  "giftPlan.GiftPlanCollectionAdminModal.giftCoverTips": "建議圖片尺寸：600*600px",
+  "giftPlan.GiftPlanCollectionAdminModal.giftDeliverMethod": "贈品交付方式",
+  "giftPlan.GiftPlanCollectionAdminModal.giftItemName": "贈品項目",
+  "giftPlan.GiftPlanCollectionAdminModal.isDeliverable": "需索取寄送地址",
+  "giftPlan.GiftPlanCollectionAdminModal.isNotDeliverable": "線上自行交付",
+  "giftPlan.GiftPlanCollectionAdminModal.title": "贈品方案名稱",
+  "giftPlan.GiftPlanCollectionAdminModal.titleIsRequired": "贈品方案名稱為必填",
+  "giftPlan.GiftPlanDeleteAdminModal.deleteGriftPlanMessage": "確定刪除此贈品方案？",
+  "giftPlan.GiftPlanPublishAdminModal.discontinueGriftPlanMessage": "確定下架此贈品方案？",
   "hooks.data.activity": "活動",
   "hooks.data.certificate": "證書",
   "hooks.data.merchandise": "商品",
@@ -1622,6 +1659,7 @@
   "merchandise.ui.shippingStoreName": "Nhận cửa hàng",
   "merchandiseInventory.label.currentInventory": "trong kho",
   "merchandiseInventory.label.sold": "Doanh thu",
+  "order.label.gift": "贈品項目",
   "order.label.hasPaid": " Trả phí ",
   "order.label.hasRefunded": "Đã hoàn lại ",
   "order.label.invoiceAddress": " Địa chỉ hóa đơn ",
@@ -1654,10 +1692,14 @@
   "order.label.paymentLogGateway": " Kênh giao dịch ",
   "order.label.paymentLogNo": " ID giao dịch ",
   "order.label.paymentLogPaidAt": " Thời gian thanh toán ",
+  "order.label.productEndedAt": "項目到期時間",
   "order.label.productOwner": " Người tạo ",
   "order.label.productPrice": " Số lượng mặt hàng ",
   "order.label.productQuantity": " Số lượng mặt hàng ",
   "order.label.productType": " Danh mục mặt hàng ",
+  "order.label.recipientAddress": "收件地址",
+  "order.label.recipientName": "收件人",
+  "order.label.recipientPhone": "收件電話",
   "order.label.referrer": "Liên kết giới thiệu ",
   "order.label.sharingCode": " URL quảng cáo ",
   "order.label.sharingNote": " Ghi chú Khuyến mại ",
@@ -1678,6 +1720,7 @@
   "page.*.day": "日",
   "page.*.deleteProductDanger": "*已購買者在刪除後仍可觀看。",
   "page.*.deliveryDate": "發送日",
+  "page.*.discontinued": "已下架",
   "page.*.edit": " Chỉnh sửa ",
   "page.*.editCouponPlan": "編輯折價方案",
   "page.*.eligibilityList": "資格名單",
@@ -1742,6 +1785,7 @@
   "page.CouponCollectionBlock.emptyCouponPlan": "無任何折價方案",
   "page.CouponCollectionBlock.showMore": "顯示更多",
   "page.CouponPlanCollectionAdminPage.searchPlaceholder": "搜尋折扣代碼或折價券名稱",
+  "page.GiftPlanCollectionAdminPage.giftPlan": "贈品方案",
   "page.ProgramPackageProcessBlock.allProgramPackage": "Tất cả các khóa học",
   "page.ProgramPackageProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramPackageProcessBlock.chooseProgramPackageCategory": "Chọn Phân loại kết hợp khóa học",
@@ -1801,9 +1845,11 @@
   "page.VenueCollectionPage.createVenue": "新增場地",
   "page.VenueCollectionPage.rows": "總行數",
   "page.VenueCollectionPage.seats": "座位數",
+  "page.VenueSeatSetting.blackboardPosition": "黑板位置",
   "page.VenueSeatSetting.col": "直欄",
   "page.VenueSeatSetting.cols": "直的列數",
   "page.VenueSeatSetting.high": "高起來",
+  "page.VenueSeatSetting.highWord": "高",
   "page.VenueSeatSetting.row": "橫列",
   "page.VenueSeatSetting.rows": "橫的行數",
   "page.VenueSeatSetting.walkway": "走道",
@@ -1976,12 +2022,26 @@
   "program.ProgramCollectionSelector.sortDesc": " Đảo ngược thứ tự ",
   "program.ProgramContentAdminItem.privatePractice": "私密作業",
   "program.ProgramPackageSelector.allProgramPackage": "Tất cả các khóa học",
+  "program.ProgramPlanAdminModal.availableForAllContent": "可看課程所有內容",
+  "program.ProgramPlanAdminModal.availableForPastContent": "可看指定方案過去與未來內容",
+  "program.ProgramPlanAdminModal.isPublished": "是否顯示方案",
+  "program.ProgramPlanAdminModal.permissionType": "選擇內容觀看權限",
+  "program.ProgramPlanAdminModal.planDescription": "方案描述",
+  "program.ProgramPlanAdminModal.planTitle": "方案名稱",
+  "program.ProgramPlanAdminModal.programExpirationNotice": "課程到期通知",
+  "program.ProgramPlanAdminModal.published": "發售，上架後立即開賣",
+  "program.ProgramPlanAdminModal.subscriptionPeriodType": "訂閱週期",
+  "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
+  "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
+  "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
   "program.event.editIssueFailed": "Chỉnh sửa sự cố không thành công",
   "program.label.allProgram": "Tất cả chương trình",
   "program.label.allowMultipleAnswers": " Cho phép nhiều câu trả lời đúng ",
   "program.label.answerDescription": " Câu trả lời Mô tả ",
   "program.label.availableForAllContent": " Có tất cả nội dung ",
   "program.label.availableForPastContent": " Có sẵn nội dung trước đây ",
+  "program.label.availableToGoBack": "可返回前題",
+  "program.label.availableToRetry": "可重新測驗",
   "program.label.choice": " Tùy chọn ",
   "program.label.chooseCaptionLanguage": " Chọn ngôn ngữ phụ đề ",
   "program.label.contentPlan": "Kế hoạch Nội dung",
@@ -1994,8 +2054,10 @@
   "program.label.displayPrivate": " Kết quả Riêng tư ",
   "program.label.duration": "Thời lượng (phút)",
   "program.label.estimatedTime": " Thời gian ước tính (phút) ",
+  "program.label.exercise": "課後測驗",
   "program.label.exerciseCreatedAt": "Ngày kiểm tra",
   "program.label.exerciseStatistics": "Điều kiện trả lời",
+  "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": " IndividualExercise ",
   "program.label.isCorrectAnswer": " Đây là câu trả lời chính xác ",
   "program.label.isPublished": " Có hiển thị chương trình hay không ",
@@ -2044,6 +2106,7 @@
   "program.text.coverRequiredTips": " Nếu bài tập chủ yếu dựa trên các tệp, thì không nên kiểm tra ",
   "program.text.deleteChoiceDescription": "Nếu bạn xóa một tùy chọn, nó sẽ không thể khôi phục được. Bạn có chắc chắn muốn xóa nó không? ",
   "program.text.deleteContentWarning": " Bạn có chắc chắn muốn xóa nội dung này không? Không thể hoàn tác hành động này ",
+  "program.text.deleteExerciseWarning": "將刪除所有與此測驗相關資料且不可復原，確定要刪除嗎？",
   "program.text.deletePracticeWarning": " Tất cả dữ liệu liên quan đến công việc này sẽ bị xóa và không thể khôi phục được. Bạn có chắc chắn muốn xóa nó không? ",
   "program.text.deleteQuestionDescription": " Không thể hoàn tác việc xóa câu hỏi. Bạn có chắc chắn muốn xóa câu hỏi đó không? ",
   "program.text.deleteSectionWarning": " Tất cả nội dung trong phần này sẽ bị xóa, không thể hoàn tác hành động này ",
@@ -2107,6 +2170,7 @@
   "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
   "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
   "programPackage.ProgramPackagePlanCollectionBlock.skuSetting": "設定料號",
+  "programPackage.isPrivatelyPublishedNotation": "你的課程組合已經私密發佈，此課程組合不會出現在頁面上，學生僅能透過連結進入瀏覽。",
   "programPackage.label.availableForLimitTime": " Có sẵn để xem {số tiền} {đơn vị} ",
   "programPackage.label.delete": " Xóa Gói Khóa học ",
   "programPackage.label.generalSetting": " Cài đặt Chung ",
@@ -2117,6 +2181,7 @@
   "programPackage.label.perpetualPeriod": "Chu kỳ vĩnh viễn ",
   "programPackage.label.program": " Chương trình Chương trình ",
   "programPackage.label.subscriptionPeriod": " Thời gian Đăng ký ",
+  "programPackage.privatelyPublished": "已私密發佈",
   "programPackage.status.notCompleteNotation": " Chưa được xuất bản, gói khóa học này sẽ không được hiển thị trên trang ",
   "programPackage.status.publishedNotation": " Bây giờ gói khóa học của bạn đã được xuất bản, nó sẽ xuất hiện trên trang. ",
   "programPackage.status.unpublished": " Chưa được xuất bản ",
@@ -2177,6 +2242,7 @@
   "project.ui.activateShop": " Phát hành dự án ",
   "project.ui.closeShop": " Hủy xuất bản ",
   "project.ui.saveProjectPlan": " Lưu dự án ",
+  "promotion.*.isRequired": "請輸入{field}",
   "promotion.event.successfullyRevoked": "Phục hồi thành công",
   "promotion.label.amount": " Số lượng ",
   "promotion.label.availableDateRange": "Ngày có sẵn",
@@ -2233,6 +2299,7 @@
   "promotion.text.sentUsedCount": "Tổng {total} / Đã gửi {Exchange} / Đã sử dụng {used}",
   "promotion.text.titlePlaceholder": "Vui lòng điền vào tên dự án",
   "promotion.ui.addVoucher": "Thêm phiếu thưởng",
+  "promotion.ui.createGiftPlan": "建立贈品",
   "promotion.ui.custom": "Tùy chỉnh",
   "promotion.ui.editCouponPlan": "Chỉnh sửa gói phiếu thưởng",
   "promotion.ui.exchange": "Trao đổi",
@@ -2306,7 +2373,6 @@
   "sales.label.keepInTouch": " Đang phát triển ",
   "sales.label.lastContactAt": " Lần liên hệ cuối cùng ",
   "sales.label.lastTask": "Việc làm gần đây ",
-  "sales.label.paidLead": " Sinh viên hiện có ",
   "sales.label.paidPrice": " Số tiền đã trả ",
   "sales.label.potentials": " Được phát triển ",
   "sales.label.presentedLead": "ShowedLead ",
@@ -2321,6 +2387,7 @@
   "sales.label.salesPerformance": " Tóm tắt Hiệu suất ",
   "sales.label.salesStatus": " Trạng thái Trận chiến Trực tiếp ",
   "sales.label.serviceEndedAt": " Dịch vụ đã kết thúc tại ",
+  "sales.label.signedLead": " Sinh viên hiện có ",
   "sales.label.star": " Cấp sao ",
   "sales.label.starredLead": "Danh sách",
   "sales.label.status": " Trạng thái ",
