--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -21,6 +21,7 @@
   "ForbiddenPage.*.home": "Home",
   "ForbiddenPage.*.noAuthority": "You are not authorized to view this page.",
   "ForbiddenPage.*.previousPage": "Previous",
+  "GiftPlanCollectionAdminPage.GiftPlanCollectionBlock.createAt": "建立日期",
   "ProgramAdminPage.*.approvalHistory": "审核纪录",
   "ProgramAdminPage.*.basicSettings": "基本设定",
   "ProgramAdminPage.*.cancel": "取消",
@@ -156,6 +157,7 @@
   "activity.status.hidden": "不公开",
   "activity.status.holding": "正在举办",
   "activity.status.notPublishedTicket": "停售，该票券暂停对外销售，并从购票页中隐藏",
+  "activity.status.privateHolding": "私密舉辦",
   "activity.status.public": "公开",
   "activity.status.publishedTicket": "发售，活动上架后立即开卖",
   "activity.text.deleteActivitySessionWarning": "你确定要删除此场次？此动作无法还原",
@@ -164,6 +166,7 @@
   "activity.text.noDescription": "尚未填写活动简介",
   "activity.text.noTicketPlan": "尚未订定票券方案",
   "activity.text.notCompleteNotation": "请填写以下必填资料，填写完毕即可由此发布",
+  "activity.text.privatelyPublishedNotation": "你的活動已經私密發佈，此活動不會出現在頁面上，學生僅能透過連結進入瀏覽。",
   "activity.text.publishedNotation": "现在你的活动已经发布，此活动会出现在页面上。",
   "activity.text.unpublishedNotation": "因你的活动未发布，此活动并不会显示在页面上。",
   "activity.ui.addTicketPlan": "加入票券方案",
@@ -199,6 +202,7 @@
   "admin.AdminMenu.creditAdmin": "红利折抵",
   "admin.AdminMenu.eCommerce": "电子商务",
   "admin.AdminMenu.exerciseResult": "测验成果",
+  "admin.AdminMenu.giftPlans": "贈品方案",
   "admin.AdminMenu.learningOverviewAdmin": "学习总览",
   "admin.AdminMenu.mediaLibrary": "媒体库",
   "admin.AdminMenu.memberAdmin": "会员管理",
@@ -440,6 +444,8 @@
   "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
   "common.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
+  "common.confirmPrivatelyPublishedNotation": "將不會出現在列表，僅以私下提供連結的方式。",
+  "common.confirmPrivatelyPublishedTitle": "確定要設為私密發佈？",
   "common.event.cancelSubscriptionSuccess": "取消订阅成功",
   "common.event.failedSave": "储存失败",
   "common.event.failedUpload": "上传失败",
@@ -460,6 +466,7 @@
   "common.label.adminBackstage": "管理后台",
   "common.label.all": "全部",
   "common.label.allActivityTicket": "所有实体活动",
+  "common.label.allGiftPlan": "所有贈品方案",
   "common.label.allMembers": "全部会员",
   "common.label.allMembershipCard": "所有会员卡",
   "common.label.allMerchandise": "所有商品",
@@ -535,6 +542,7 @@
   "common.label.invoiceUniformNumber": "发票统编",
   "common.label.invoiceUniformTitle": "发票抬头",
   "common.label.isAppOwner": "我是管理者",
+  "common.label.keywords": "keywords",
   "common.label.languages": "显示语系",
   "common.label.lastLogin": "上次登入",
   "common.label.leadLevel": "分級",
@@ -553,6 +561,11 @@
   "common.label.newPasswordAgain": "再次输入新密码",
   "common.label.notMember": "还不是会员吗？",
   "common.label.notification": "通知",
+  "common.label.ogDescription": "og:description",
+  "common.label.ogImage": "og:image",
+  "common.label.ogImageAlt": "og:image:alt",
+  "common.label.ogTitle": "og:title",
+  "common.label.openGraphSettings": "Open Graph Settings",
   "common.label.optional": "非必填",
   "common.label.orderDiscountId": "折扣编号",
   "common.label.orderDiscountName": "折扣名称",
@@ -580,6 +593,7 @@
   "common.label.originalPrice": "原价",
   "common.label.ownedCoins": "持有代币",
   "common.label.owner": "建立者",
+  "common.label.pageTitle": "Page Title",
   "common.label.participants": "人数",
   "common.label.password": "密码",
   "common.label.paymentCreatedAt": "交易时间",
@@ -629,6 +643,8 @@
   "common.label.selectEndTime": "选择截止日",
   "common.label.selectInstructor": "选择老师",
   "common.label.sellingStatus": "贩售状态",
+  "common.label.seoDescription": "description",
+  "common.label.seoSettings": "SEO Settings",
   "common.label.sessionTitle": "场次名称",
   "common.label.shortDescription": "简述",
   "common.label.sku": "SKU",
@@ -713,6 +729,7 @@
   "common.menu.tempoDelivery": "节奏交付",
   "common.period.no": "无使用期限",
   "common.placeholder.enterUrlLink": "输入网址连结",
+  "common.placeholder.useCommaToSeparateKeywords": "Use comma to separate keywords",
   "common.product.activityTicket": "活动票券",
   "common.product.allActivityTicket": "全部活动",
   "common.product.allAppointmentPlan": "全部预约",
@@ -797,6 +814,7 @@
   "common.text.totalActualSalesNotation": "销售总额 - 订阅首期折扣 = 实际销售总额",
   "common.text.totalCount": "共 {count} 笔",
   "common.text.unpublishingTitle": "确定要取消发布？",
+  "common.text.unpublishingWarning": "將下架且不會出現在列表，已擁有權益的會員仍然可以看到內容。",
   "common.text.withSharingCode": "推广网址：{code}",
   "common.ui.add": "新增",
   "common.ui.addAuthor": "新增作者",
@@ -828,6 +846,7 @@
   "common.ui.deleteProgram": "删除课程",
   "common.ui.desktopCollection": "电脑",
   "common.ui.detail": "详情",
+  "common.ui.discontinue": "下架",
   "common.ui.download": "下载",
   "common.ui.downloadMemberList": "下载名单",
   "common.ui.duplicate": "复制",
@@ -846,6 +865,7 @@
   "common.ui.goToCart": "前往购物车",
   "common.ui.googleLogin": "Google 登入/注册",
   "common.ui.gutter": "间距",
+  "common.ui.hasGiftPlan": "附贈品",
   "common.ui.hideCreator": "隐藏讲师",
   "common.ui.image": "图片",
   "common.ui.import": "汇入",
@@ -1119,6 +1139,7 @@
   "craft.label.feature": "特色",
   "craft.label.fundraising": "募资",
   "craft.label.fundraisingBlock": "讲师区块",
+  "craft.label.generalSettings": "一般設定",
   "craft.label.imageBlock": "图片区块",
   "craft.label.imageSetting": "图片设定",
   "craft.label.imageStyle": "图片样式",
@@ -1220,6 +1241,10 @@
   "error.text.forbidden": "你没有此页面的读取权限",
   "error.text.invalidURL": "无效的网址",
   "error.text.memberAlreadyExist": "会员已存在",
+  "form.*.endedAt": "截止日期",
+  "form.*.startedAt": "開始日期",
+  "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
+  "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
   "form.PermissionGroup.ACTIVITY_ADMIN": "所有活动功能",
   "form.PermissionGroup.ACTIVITY_CATEGORY_ADMIN": "所有活动分类功能",
   "form.PermissionGroup.ACTIVITY_CATEGORY_DELETE": "删除活动分类",
@@ -1389,6 +1414,18 @@
   "form.PermissionInput.salesManagement": "业务管理",
   "form.PermissionInput.task": "待办管理",
   "form.PermissionInput.voucher": "兑换方案",
+  "giftPlan.GiftPlanCollectionAdminModal.customGiftNameIsRequired": "贈品項目名稱為必填",
+  "giftPlan.GiftPlanCollectionAdminModal.editGiftPlan": "編輯贈品方案",
+  "giftPlan.GiftPlanCollectionAdminModal.giftCover": "贈品封面",
+  "giftPlan.GiftPlanCollectionAdminModal.giftCoverTips": "建議圖片尺寸：600*600px",
+  "giftPlan.GiftPlanCollectionAdminModal.giftDeliverMethod": "贈品交付方式",
+  "giftPlan.GiftPlanCollectionAdminModal.giftItemName": "贈品項目",
+  "giftPlan.GiftPlanCollectionAdminModal.isDeliverable": "需索取寄送地址",
+  "giftPlan.GiftPlanCollectionAdminModal.isNotDeliverable": "線上自行交付",
+  "giftPlan.GiftPlanCollectionAdminModal.title": "贈品方案名稱",
+  "giftPlan.GiftPlanCollectionAdminModal.titleIsRequired": "贈品方案名稱為必填",
+  "giftPlan.GiftPlanDeleteAdminModal.deleteGriftPlanMessage": "確定刪除此贈品方案？",
+  "giftPlan.GiftPlanPublishAdminModal.discontinueGriftPlanMessage": "確定下架此贈品方案？",
   "hooks.data.activity": "活動",
   "hooks.data.certificate": "證書",
   "hooks.data.merchandise": "商品",
@@ -1622,6 +1659,7 @@
   "merchandise.ui.shippingStoreName": "收件门市",
   "merchandiseInventory.label.currentInventory": "库存",
   "merchandiseInventory.label.sold": "已售",
+  "order.label.gift": "贈品項目",
   "order.label.hasPaid": "已支付",
   "order.label.hasRefunded": "已退款",
   "order.label.invoiceAddress": "发票地址",
@@ -1654,10 +1692,14 @@
   "order.label.paymentLogGateway": "交易渠道",
   "order.label.paymentLogNo": "交易编号",
   "order.label.paymentLogPaidAt": "付款时间",
+  "order.label.productEndedAt": "項目到期時間",
   "order.label.productOwner": "创作者",
   "order.label.productPrice": "项目金额",
   "order.label.productQuantity": "项目数量",
   "order.label.productType": "项目类别",
+  "order.label.recipientAddress": "收件地址",
+  "order.label.recipientName": "收件人",
+  "order.label.recipientPhone": "收件電話",
   "order.label.referrer": "推荐人",
   "order.label.sharingCode": "推广网址",
   "order.label.sharingNote": "推广备注",
@@ -1678,6 +1720,7 @@
   "page.*.day": "日",
   "page.*.deleteProductDanger": "*已購買者在刪除後仍可觀看。",
   "page.*.deliveryDate": "發送日",
+  "page.*.discontinued": "已下架",
   "page.*.edit": "编辑",
   "page.*.editCouponPlan": "編輯折價方案",
   "page.*.eligibilityList": "資格名單",
@@ -1742,6 +1785,7 @@
   "page.CouponCollectionBlock.emptyCouponPlan": "無任何折價方案",
   "page.CouponCollectionBlock.showMore": "顯示更多",
   "page.CouponPlanCollectionAdminPage.searchPlaceholder": "搜尋折扣代碼或折價券名稱",
+  "page.GiftPlanCollectionAdminPage.giftPlan": "贈品方案",
   "page.ProgramPackageProcessBlock.allProgramPackage": "全部课程组合",
   "page.ProgramPackageProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramPackageProcessBlock.chooseProgramPackageCategory": "选择课程组合分类",
@@ -1801,9 +1845,11 @@
   "page.VenueCollectionPage.createVenue": "新增場地",
   "page.VenueCollectionPage.rows": "總行數",
   "page.VenueCollectionPage.seats": "座位數",
+  "page.VenueSeatSetting.blackboardPosition": "黑板位置",
   "page.VenueSeatSetting.col": "直欄",
   "page.VenueSeatSetting.cols": "直的列數",
   "page.VenueSeatSetting.high": "高起來",
+  "page.VenueSeatSetting.highWord": "高",
   "page.VenueSeatSetting.row": "橫列",
   "page.VenueSeatSetting.rows": "橫的行數",
   "page.VenueSeatSetting.walkway": "走道",
@@ -1976,12 +2022,26 @@
   "program.ProgramCollectionSelector.sortDesc": "倒序",
   "program.ProgramContentAdminItem.privatePractice": "私密作業",
   "program.ProgramPackageSelector.allProgramPackage": "全部课程组合",
+  "program.ProgramPlanAdminModal.availableForAllContent": "可看課程所有內容",
+  "program.ProgramPlanAdminModal.availableForPastContent": "可看指定方案過去與未來內容",
+  "program.ProgramPlanAdminModal.isPublished": "是否顯示方案",
+  "program.ProgramPlanAdminModal.permissionType": "選擇內容觀看權限",
+  "program.ProgramPlanAdminModal.planDescription": "方案描述",
+  "program.ProgramPlanAdminModal.planTitle": "方案名稱",
+  "program.ProgramPlanAdminModal.programExpirationNotice": "課程到期通知",
+  "program.ProgramPlanAdminModal.published": "發售，上架後立即開賣",
+  "program.ProgramPlanAdminModal.subscriptionPeriodType": "訂閱週期",
+  "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
+  "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
+  "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
   "program.event.editIssueFailed": "无法更改问题",
   "program.label.allProgram": "全部课程",
   "program.label.allowMultipleAnswers": "允许多个正确解答",
   "program.label.answerDescription": "解答说明",
   "program.label.availableForAllContent": "可看课程所有内容",
   "program.label.availableForPastContent": "可看过去内容",
+  "program.label.availableToGoBack": "可返回前題",
+  "program.label.availableToRetry": "可重新測驗",
   "program.label.choice": "选项",
   "program.label.chooseCaptionLanguage": "选择字幕语系",
   "program.label.contentPlan": "适用方案",
@@ -1994,8 +2054,10 @@
   "program.label.displayPrivate": "私密成果",
   "program.label.duration": "内容时长（分钟）",
   "program.label.estimatedTime": "估计时间（分钟）",
+  "program.label.exercise": "課後測驗",
   "program.label.exerciseCreatedAt": "测验日期",
   "program.label.exerciseStatistics": "答题状况",
+  "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": "个别表现",
   "program.label.isCorrectAnswer": "此为正确解答",
   "program.label.isPublished": "是否显示方案",
@@ -2044,6 +2106,7 @@
   "program.text.coverRequiredTips": "若作业形式以文件为主，建议不勾选",
   "program.text.deleteChoiceDescription": "选项删除即不可恢复，确定要删除吗？",
   "program.text.deleteContentWarning": "你确定要删除此内容？此动作无法还原",
+  "program.text.deleteExerciseWarning": "將刪除所有與此測驗相關資料且不可復原，確定要刪除嗎？",
   "program.text.deletePracticeWarning": "将删除所有与此作业相关资料且不可复原，确定要删除吗？",
   "program.text.deleteQuestionDescription": "题目删除即不可恢复，确定要删除吗？ ",
   "program.text.deleteSectionWarning": "此区块内的所有内容将被删除，此动作无法还原",
@@ -2107,6 +2170,7 @@
   "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
   "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
   "programPackage.ProgramPackagePlanCollectionBlock.skuSetting": "設定料號",
+  "programPackage.isPrivatelyPublishedNotation": "你的課程組合已經私密發佈，此課程組合不會出現在頁面上，學生僅能透過連結進入瀏覽。",
   "programPackage.label.availableForLimitTime": "可观看 {amount} {unit}",
   "programPackage.label.delete": "删除课程组合",
   "programPackage.label.generalSetting": "一般设定",
@@ -2117,6 +2181,7 @@
   "programPackage.label.perpetualPeriod": "观看期限",
   "programPackage.label.program": "课程项目",
   "programPackage.label.subscriptionPeriod": "订阅周期",
+  "programPackage.privatelyPublished": "已私密發佈",
   "programPackage.status.notCompleteNotation": "未发布，此课程组合并不会显示在页面上",
   "programPackage.status.publishedNotation": "现在你的课程组合已发布，此课程组合会出现在页面上。",
   "programPackage.status.unpublished": "未发布",
@@ -2177,6 +2242,7 @@
   "project.ui.activateShop": "发布专案",
   "project.ui.closeShop": "取消发布",
   "project.ui.saveProjectPlan": "储存方案",
+  "promotion.*.isRequired": "請輸入{field}",
   "promotion.event.successfullyRevoked": "收回成功",
   "promotion.label.amount": "数量",
   "promotion.label.availableDateRange": "有效期限",
@@ -2233,6 +2299,7 @@
   "promotion.text.sentUsedCount": "总量{total} / 发送{exchanged}",
   "promotion.text.titlePlaceholder": "请填写项目名称",
   "promotion.ui.addVoucher": "新增兑换券",
+  "promotion.ui.createGiftPlan": "建立贈品",
   "promotion.ui.custom": "自订",
   "promotion.ui.editCouponPlan": "编辑折价方案",
   "promotion.ui.exchange": "兑换",
@@ -2306,7 +2373,6 @@
   "sales.label.keepInTouch": "开发中",
   "sales.label.lastContactAt": "最近联系时间",
   "sales.label.lastTask": "最近待办",
-  "sales.label.paidLead": "既有学员",
   "sales.label.paidPrice": "已付金额",
   "sales.label.potentials": "待开发",
   "sales.label.presentedLead": "已示范名单",
@@ -2321,6 +2387,7 @@
   "sales.label.salesPerformance": "业绩总表",
   "sales.label.salesStatus": "即时战况",
   "sales.label.serviceEndedAt": "服务截止时间",
+  "sales.label.signedLead": "既有学员",
   "sales.label.star": "星等",
   "sales.label.starredLead": "收藏名单",
   "sales.label.status": "状态",
