--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -21,6 +21,7 @@
   "ForbiddenPage.*.home": "Home",
   "ForbiddenPage.*.noAuthority": "You are not authorized to view this page.",
   "ForbiddenPage.*.previousPage": "Previous",
+  "GiftPlanCollectionAdminPage.GiftPlanCollectionBlock.createAt": "建立日期",
   "ProgramAdminPage.*.approvalHistory": "審核紀錄",
   "ProgramAdminPage.*.basicSettings": "基本設定",
   "ProgramAdminPage.*.cancel": "取消",
@@ -156,6 +157,7 @@
   "activity.status.hidden": "Hidden",
   "activity.status.holding": "Holding",
   "activity.status.notPublishedTicket": "Suspended.",
+  "activity.status.privateHolding": "私密舉辦",
   "activity.status.public": "Show",
   "activity.status.publishedTicket": "Published.",
   "activity.text.deleteActivitySessionWarning": "Are you sure you want to delete this session? This action cannot be restored",
@@ -164,6 +166,7 @@
   "activity.text.noDescription": "No activity description.",
   "activity.text.noTicketPlan": "No ticket Plan.",
   "activity.text.notCompleteNotation": "Please fill in the required information below. Fill it out and publish it.",
+  "activity.text.privatelyPublishedNotation": "你的活動已經私密發佈，此活動不會出現在頁面上，學生僅能透過連結進入瀏覽。",
   "activity.text.publishedNotation": "Now that your activity is published, it will appear on the page.",
   "activity.text.unpublishedNotation": "Because your activity is unpublished, this activity will not be displayed on the page.",
   "activity.ui.addTicketPlan": "Add Ticket Plan",
@@ -199,6 +202,7 @@
   "admin.AdminMenu.creditAdmin": "Credit",
   "admin.AdminMenu.eCommerce": "eCommerce",
   "admin.AdminMenu.exerciseResult": "Exercise Result",
+  "admin.AdminMenu.giftPlans": "贈品方案",
   "admin.AdminMenu.learningOverviewAdmin": "Learning Overview",
   "admin.AdminMenu.mediaLibrary": "Media Library",
   "admin.AdminMenu.memberAdmin": "Member",
@@ -440,6 +444,8 @@
   "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
   "common.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
+  "common.confirmPrivatelyPublishedNotation": "將不會出現在列表，僅以私下提供連結的方式。",
+  "common.confirmPrivatelyPublishedTitle": "確定要設為私密發佈？",
   "common.event.cancelSubscriptionSuccess": "Cancel SubscriptionSuccess",
   "common.event.failedSave": "Save failed",
   "common.event.failedUpload": "Upload failed",
@@ -460,6 +466,7 @@
   "common.label.adminBackstage": "Admin Backstage",
   "common.label.all": "All",
   "common.label.allActivityTicket": "All activities",
+  "common.label.allGiftPlan": "所有贈品方案",
   "common.label.allMembers": "All Members",
   "common.label.allMembershipCard": "All Membership Cards",
   "common.label.allMerchandise": "All merchandises",
@@ -535,6 +542,7 @@
   "common.label.invoiceUniformNumber": "Invoice Uniform Number",
   "common.label.invoiceUniformTitle": "Invoice Uniform Title",
   "common.label.isAppOwner": "Administrator",
+  "common.label.keywords": "keywords",
   "common.label.languages": "Languages",
   "common.label.lastLogin": "Last Login",
   "common.label.leadLevel": "分級",
@@ -553,6 +561,11 @@
   "common.label.newPasswordAgain": "new password again",
   "common.label.notMember": "Not a member?",
   "common.label.notification": "Notification",
+  "common.label.ogDescription": "og:description",
+  "common.label.ogImage": "og:image",
+  "common.label.ogImageAlt": "og:image:alt",
+  "common.label.ogTitle": "og:title",
+  "common.label.openGraphSettings": "Open Graph Settings",
   "common.label.optional": "Optional",
   "common.label.orderDiscountId": "Discount ID",
   "common.label.orderDiscountName": "Discount Name",
@@ -580,6 +593,7 @@
   "common.label.originalPrice": "Original Price",
   "common.label.ownedCoins": "Owned Coins",
   "common.label.owner": "Founder",
+  "common.label.pageTitle": "Page Title",
   "common.label.participants": "Number of people",
   "common.label.password": "Password",
   "common.label.paymentCreatedAt": "Transaction time",
@@ -629,6 +643,8 @@
   "common.label.selectEndTime": "Select End Date",
   "common.label.selectInstructor": "Instructor",
   "common.label.sellingStatus": "Selling Status",
+  "common.label.seoDescription": "description",
+  "common.label.seoSettings": "SEO Settings",
   "common.label.sessionTitle": "Session Title",
   "common.label.shortDescription": "Short Description",
   "common.label.sku": "SKU",
@@ -713,6 +729,7 @@
   "common.menu.tempoDelivery": "Tempo Delivery",
   "common.period.no": "No period of use",
   "common.placeholder.enterUrlLink": "Enter URL link",
+  "common.placeholder.useCommaToSeparateKeywords": "Use comma to separate keywords",
   "common.product.activityTicket": "Activity",
   "common.product.allActivityTicket": "All Activities",
   "common.product.allAppointmentPlan": "All AppointmentPlan",
@@ -797,6 +814,7 @@
   "common.text.totalActualSalesNotation": "Total sales -Subscription initial discount = actual sales total",
   "common.text.totalCount": "{count} results",
   "common.text.unpublishingTitle": "Are you sure you want to unpublish?",
+  "common.text.unpublishingWarning": "將下架且不會出現在列表，已擁有權益的會員仍然可以看到內容。",
   "common.text.withSharingCode": "Promotion URL: {code}",
   "common.ui.add": "Add",
   "common.ui.addAuthor": "Add Author",
@@ -828,6 +846,7 @@
   "common.ui.deleteProgram": "Delete Course",
   "common.ui.desktopCollection": "Computer",
   "common.ui.detail": "Detail",
+  "common.ui.discontinue": "下架",
   "common.ui.download": "Download",
   "common.ui.downloadMemberList": "Download List",
   "common.ui.duplicate": "Duplicate",
@@ -846,6 +865,7 @@
   "common.ui.goToCart": "Go to Cart",
   "common.ui.googleLogin": "Google login/register",
   "common.ui.gutter": "Gutter",
+  "common.ui.hasGiftPlan": "附贈品",
   "common.ui.hideCreator": "Hide Lecturer",
   "common.ui.image": "image",
   "common.ui.import": "Import",
@@ -1119,6 +1139,7 @@
   "craft.label.feature": "Feature",
   "craft.label.fundraising": "Fundraising",
   "craft.label.fundraisingBlock": "Lecturer Block",
+  "craft.label.generalSettings": "一般設定",
   "craft.label.imageBlock": "Image Block",
   "craft.label.imageSetting": "Image Setting",
   "craft.label.imageStyle": "Image Style",
@@ -1220,6 +1241,10 @@
   "error.text.forbidden": "Permission denied.",
   "error.text.invalidURL": "Invalid URL",
   "error.text.memberAlreadyExist": "Member already exists",
+  "form.*.endedAt": "截止日期",
+  "form.*.startedAt": "開始日期",
+  "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
+  "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
   "form.PermissionGroup.ACTIVITY_ADMIN": "所有活動功能",
   "form.PermissionGroup.ACTIVITY_CATEGORY_ADMIN": "所有活動分類功能",
   "form.PermissionGroup.ACTIVITY_CATEGORY_DELETE": "刪除活動分類",
@@ -1389,6 +1414,18 @@
   "form.PermissionInput.salesManagement": "業務管理",
   "form.PermissionInput.task": "待辦管理",
   "form.PermissionInput.voucher": "兌換方案",
+  "giftPlan.GiftPlanCollectionAdminModal.customGiftNameIsRequired": "贈品項目名稱為必填",
+  "giftPlan.GiftPlanCollectionAdminModal.editGiftPlan": "編輯贈品方案",
+  "giftPlan.GiftPlanCollectionAdminModal.giftCover": "贈品封面",
+  "giftPlan.GiftPlanCollectionAdminModal.giftCoverTips": "建議圖片尺寸：600*600px",
+  "giftPlan.GiftPlanCollectionAdminModal.giftDeliverMethod": "贈品交付方式",
+  "giftPlan.GiftPlanCollectionAdminModal.giftItemName": "贈品項目",
+  "giftPlan.GiftPlanCollectionAdminModal.isDeliverable": "需索取寄送地址",
+  "giftPlan.GiftPlanCollectionAdminModal.isNotDeliverable": "線上自行交付",
+  "giftPlan.GiftPlanCollectionAdminModal.title": "贈品方案名稱",
+  "giftPlan.GiftPlanCollectionAdminModal.titleIsRequired": "贈品方案名稱為必填",
+  "giftPlan.GiftPlanDeleteAdminModal.deleteGriftPlanMessage": "確定刪除此贈品方案？",
+  "giftPlan.GiftPlanPublishAdminModal.discontinueGriftPlanMessage": "確定下架此贈品方案？",
   "hooks.data.activity": "活動",
   "hooks.data.certificate": "證書",
   "hooks.data.merchandise": "商品",
@@ -1622,6 +1659,7 @@
   "merchandise.ui.shippingStoreName": "Shipping Store",
   "merchandiseInventory.label.currentInventory": "Inventory",
   "merchandiseInventory.label.sold": "Sold",
+  "order.label.gift": "贈品項目",
   "order.label.hasPaid": "Paid",
   "order.label.hasRefunded": "Refunded",
   "order.label.invoiceAddress": "Invoice Address",
@@ -1654,10 +1692,14 @@
   "order.label.paymentLogGateway": "Transaction Channel",
   "order.label.paymentLogNo": "Transaction ID",
   "order.label.paymentLogPaidAt": "Payment time",
+  "order.label.productEndedAt": "項目到期時間",
   "order.label.productOwner": "Creator",
   "order.label.productPrice": "Item Amount",
   "order.label.productQuantity": "Item Quantity",
   "order.label.productType": "Item Category",
+  "order.label.recipientAddress": "收件地址",
+  "order.label.recipientName": "收件人",
+  "order.label.recipientPhone": "收件電話",
   "order.label.referrer": "Referrer",
   "order.label.sharingCode": "Promotion URL",
   "order.label.sharingNote": "Promotion Note",
@@ -1678,6 +1720,7 @@
   "page.*.day": "日",
   "page.*.deleteProductDanger": "*已購買者在刪除後仍可觀看。",
   "page.*.deliveryDate": "發送日",
+  "page.*.discontinued": "已下架",
   "page.*.edit": "Edit",
   "page.*.editCouponPlan": "編輯折價方案",
   "page.*.eligibilityList": "資格名單",
@@ -1742,6 +1785,7 @@
   "page.CouponCollectionBlock.emptyCouponPlan": "無任何折價方案",
   "page.CouponCollectionBlock.showMore": "顯示更多",
   "page.CouponPlanCollectionAdminPage.searchPlaceholder": "搜尋折扣代碼或折價券名稱",
+  "page.GiftPlanCollectionAdminPage.giftPlan": "贈品方案",
   "page.ProgramPackageProcessBlock.allProgramPackage": "全部課程組合",
   "page.ProgramPackageProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramPackageProcessBlock.chooseProgramPackageCategory": "選擇課程組合分類",
@@ -1801,9 +1845,11 @@
   "page.VenueCollectionPage.createVenue": "新增場地",
   "page.VenueCollectionPage.rows": "總行數",
   "page.VenueCollectionPage.seats": "座位數",
+  "page.VenueSeatSetting.blackboardPosition": "黑板位置",
   "page.VenueSeatSetting.col": "直欄",
   "page.VenueSeatSetting.cols": "直的列數",
   "page.VenueSeatSetting.high": "高起來",
+  "page.VenueSeatSetting.highWord": "高",
   "page.VenueSeatSetting.row": "橫列",
   "page.VenueSeatSetting.rows": "橫的行數",
   "page.VenueSeatSetting.walkway": "走道",
@@ -1976,12 +2022,26 @@
   "program.ProgramCollectionSelector.sortDesc": "Reverse order",
   "program.ProgramContentAdminItem.privatePractice": "私密作業",
   "program.ProgramPackageSelector.allProgramPackage": "全部課程組合",
+  "program.ProgramPlanAdminModal.availableForAllContent": "可看課程所有內容",
+  "program.ProgramPlanAdminModal.availableForPastContent": "可看指定方案過去與未來內容",
+  "program.ProgramPlanAdminModal.isPublished": "是否顯示方案",
+  "program.ProgramPlanAdminModal.permissionType": "選擇內容觀看權限",
+  "program.ProgramPlanAdminModal.planDescription": "方案描述",
+  "program.ProgramPlanAdminModal.planTitle": "方案名稱",
+  "program.ProgramPlanAdminModal.programExpirationNotice": "課程到期通知",
+  "program.ProgramPlanAdminModal.published": "發售，上架後立即開賣",
+  "program.ProgramPlanAdminModal.subscriptionPeriodType": "訂閱週期",
+  "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
+  "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
+  "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
   "program.event.editIssueFailed": "Edit issue failed",
   "program.label.allProgram": "All Program",
   "program.label.allowMultipleAnswers": "Allow multiple correct answers",
   "program.label.answerDescription": "Answer Description",
   "program.label.availableForAllContent": "All Content Available",
   "program.label.availableForPastContent": "Past Content Available",
+  "program.label.availableToGoBack": "可返回前題",
+  "program.label.availableToRetry": "可重新測驗",
   "program.label.choice": "Option",
   "program.label.chooseCaptionLanguage": "Choose a subtitle language",
   "program.label.contentPlan": "Content Plan",
@@ -1994,8 +2054,10 @@
   "program.label.displayPrivate": "Private Results",
   "program.label.duration": "Duration (minutes)",
   "program.label.estimatedTime": "Estimated time (minutes)",
+  "program.label.exercise": "課後測驗",
   "program.label.exerciseCreatedAt": "Exam Date",
   "program.label.exerciseStatistics": "Exam Status",
+  "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": "IndividualExercise",
   "program.label.isCorrectAnswer": "This is the correct answer",
   "program.label.isPublished": "Whether to display the program",
@@ -2044,6 +2106,7 @@
   "program.text.coverRequiredTips": "If the assignment is mainly based on files, it is recommended not to check",
   "program.text.deleteChoiceDescription": "If you delete an option, it cannot be recovered. Are you sure you want to delete it?",
   "program.text.deleteContentWarning": "Are you sure you want to delete this content? This action cannot be undone",
+  "program.text.deleteExerciseWarning": "將刪除所有與此測驗相關資料且不可復原，確定要刪除嗎？",
   "program.text.deletePracticeWarning": "All data related to this job will be deleted and cannot be recovered. Are you sure you want to delete it?",
   "program.text.deleteQuestionDescription": "Delete a question is irreversible. Are you sure you want to delete it?",
   "program.text.deleteSectionWarning": "All content in this section will be deleted, this action cannot be undone",
@@ -2107,6 +2170,7 @@
   "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
   "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
   "programPackage.ProgramPackagePlanCollectionBlock.skuSetting": "設定料號",
+  "programPackage.isPrivatelyPublishedNotation": "你的課程組合已經私密發佈，此課程組合不會出現在頁面上，學生僅能透過連結進入瀏覽。",
   "programPackage.label.availableForLimitTime": "Available for viewing {amount} {unit}",
   "programPackage.label.delete": "Delete Course Package",
   "programPackage.label.generalSetting": "General Setting",
@@ -2117,6 +2181,7 @@
   "programPackage.label.perpetualPeriod": "Perpetual Period",
   "programPackage.label.program": "Program Program",
   "programPackage.label.subscriptionPeriod": "Subscription Period",
+  "programPackage.privatelyPublished": "已私密發佈",
   "programPackage.status.notCompleteNotation": "Not published, this course package will not be displayed on the page",
   "programPackage.status.publishedNotation": "Now that your course package is published, it will appear on the page.",
   "programPackage.status.unpublished": "Unpublished",
@@ -2177,6 +2242,7 @@
   "project.ui.activateShop": "Release Project",
   "project.ui.closeShop": "Unpublish",
   "project.ui.saveProjectPlan": "Save Project",
+  "promotion.*.isRequired": "請輸入{field}",
   "promotion.event.successfullyRevoked": "Revoked successfully",
   "promotion.label.amount": "Amount",
   "promotion.label.availableDateRange": "Available Date",
@@ -2233,6 +2299,7 @@
   "promotion.text.sentUsedCount": "Total {total} / Sent {exchanged} / Used {used}",
   "promotion.text.titlePlaceholder": "Please fill in the project name",
   "promotion.ui.addVoucher": "Add Voucher",
+  "promotion.ui.createGiftPlan": "建立贈品",
   "promotion.ui.custom": "Custom",
   "promotion.ui.editCouponPlan": "Edit Coupon Plan",
   "promotion.ui.exchange": "Exchange",
@@ -2306,7 +2373,6 @@
   "sales.label.keepInTouch": "In Development",
   "sales.label.lastContactAt": "Last Contact Time",
   "sales.label.lastTask": "Recent To Do",
-  "sales.label.paidLead": "Existing students",
   "sales.label.paidPrice": "Amount Paid",
   "sales.label.potentials": "To be developed",
   "sales.label.presentedLead": "ShowedLead",
@@ -2321,6 +2387,7 @@
   "sales.label.salesPerformance": "Performance Summary",
   "sales.label.salesStatus": "Live Battle Status",
   "sales.label.serviceEndedAt": "Service Ended At",
+  "sales.label.signedLead": "Existing students",
   "sales.label.star": "Star Level",
   "sales.label.starredLead": "收藏名單",
   "sales.label.status": "Status",
